@@ -46,7 +46,7 @@ class CommandDatapack(mcpython.server.command.Command.Command):
     @classmethod
     def parse(cls, values: list, modes: list, info):
         if values[0] == "enable":
-            for datapack in mcpython.common.DataPack.datapack_handler.data_packs:
+            for datapack in mcpython.common.DataPack.datapack_handler.loaded_data_packs:
                 if (
                     datapack.name == values[1]
                     and mcpython.common.DataPack.DataPackStatus.DEACTIVATED
@@ -56,7 +56,7 @@ class CommandDatapack(mcpython.server.command.Command.Command):
                     )
 
         elif values[0] == "disable":
-            for datapack in mcpython.common.DataPack.datapack_handler.data_packs:
+            for datapack in mcpython.common.DataPack.datapack_handler.loaded_data_packs:
                 if (
                     datapack.name == values[1]
                     and mcpython.common.DataPack.DataPackStatus.ACTIVATED
@@ -68,10 +68,10 @@ class CommandDatapack(mcpython.server.command.Command.Command):
         elif values[0] == "list":
             info.chat.print_ln(
                 "count: {}".format(
-                    len(mcpython.common.DataPack.datapack_handler.data_packs)
+                    len(mcpython.common.DataPack.datapack_handler.loaded_data_packs)
                 )
             )
-            for datapack in mcpython.common.DataPack.datapack_handler.data_packs:
+            for datapack in mcpython.common.DataPack.datapack_handler.loaded_data_packs:
                 info.chat.print_ln(
                     "- datapack '{}' - status: {}".format(
                         datapack.name, datapack.status.name
